fixes some low-reaching characters being cut off

--- a/app/assets/stylesheets/shared/boilerplate.css
+++ b/app/assets/stylesheets/shared/boilerplate.css
@@ -178,6 +178,7 @@ nav a.active {
 
 .main .fancy {
     font-size: 28px;
+    line-height: auto;
 }
 
 .main article.with-aside {
